--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
@@ -45,7 +45,7 @@
                                 <a href="javascript:adicionarCarrinho({{ produto.getId }})" class="btn btn-primary">
                                     <span class="add2cart">
                                         <i class="glyphicon glyphicon-shopping-cart"></i> 
-                                        Add to cart 
+                                        Adicionar 
                                     </span> 
                                 </a> </div>
                         </div>
