--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
@@ -60,7 +60,7 @@
                 <div class="dropdown cartMenu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-shopping-cart"> </i>
-                        <span class="cartRespons"> &nbsp; R$ 17,80 </span>
+                        <span class="cartRespons"> &nbsp; {{ render(controller('NutrividaLojaBundle:Loja/Carrinho:carrinhoValor')) }} </span>
                         <b class="caret"> </b>
                     </a>
 
