--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
@@ -1,67 +1,3 @@
-{#        <div class="footer_top">
-            <div class="container">
-                <div class="col-sm-2 grid-3">
-                    <h3>A NutriVida</h3>
-                    <ul class="footer_list">
-                        <li><a href="{{ path('_loja_empresa') }}">Quem Somos</a></li>
-                        <li><a href="{{ path('_loja_pedidos') }}">Pedidos e Entregas</a></li>
-                        <li><a href="{{ path('_loja_privacidade') }}">Política de Privacidade</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-2 grid-3">
-                    <h3>Atendimento</h3>
-                    <ul class="footer_list">
-                        <li><a href="#"><strong>Seg - Sex</strong></a></li>
-                        <li><a href="#">9:00 - 12:00</a></li>
-                        <li><a href="#">14:00 - 19:30</a></li>
-                        <li><a href="#"><strong>Sáb</strong></a></li>
-                        <li><a href="#">9:00 - 12:00</a></li>
-                        <li><a href="#">14:00 - 17:00</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-2 grid-3">
-                    <h3>Produtos</h3>
-                    <ul class="footer_list">
-                        <li><a href="#">Sem Glúten</a></li>
-                        <li><a href="#">Orgânicos</a></li>
-                        <li><a href="#">Integrais</a></li>
-                        <li><a href="#">Sem Lactose</a></li>
-                        <li><a href="#">Diet</a></li>
-                        <li><a href="#">Funcionais</a></li>
-                        <li><a href="#">Light</a></li>
-                        <li><a href="#">Barra de Cereal/Frutas</a></li>
-                        <li><a href="#">Nutrição Esportiva</a></li>
-                        <li><a href="#">Grãos e Farináceos</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-2 grid-3">
-                    <h3>Entre em Contato</h3>
-                    <ul class="footer_list">
-                        <li><a href="#">Contato</a></li>
-                        <li><a href="#">Av. Emancipação, 1380 Sala 4</a></li>
-                        <li><a href="#">Tramandaí / RS</a></li>
-                        <li><a href="#">+55 51 3661.4734</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 grid-3">
-                    <h3>Facebook</h3>
-                    <ul class="footer_social">
-                        <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fnutrivida.loja%2F&amp;width=315&amp;height=245&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=false&amp;show_border=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:245px;" allowTransparency="true"></iframe>
-                    </ul>
-                </div>
-                <!--<div class="col-sm-2">
-                        <img src="images/secure.png" alt=""/>
-                </div>-->
-            </div>
-        </div>
-        <div class="footer_bottom">
-            <div class="container">
-                <div class="copy">
-                    <p>desenvolvimento <a href="http://www.agenciawi9.com.br/" target="_blank">agência wi9</a></p>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>#}
 <footer>
     <div class="footer" id="footer">
         <div class="container">
@@ -74,17 +10,7 @@
                             <h4> <a class="inline" href="callto:+555136614734"> <strong> <i class="fa fa-phone"> </i> +55 51 3661.4734 </strong> </a> </h4>
                         </li>
                     </ul>
-				</div>
-                
-                <!--<div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                	<h3> Shop </h3>
-                    <ul>
-                        <li> <a href="index.html"> Home </a> </li>
-                        <li> <a href="category.html"> Category </a> </li>
-                        <li> <a href="sub-category.html"> Sub Category </a> </li>
-                    </ul>
-                </div>-->
-                
+                </div>
                 <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
                     <h3> informações </h3>
                     <ul>
@@ -108,8 +34,8 @@
                     <ul>
                         <li>
                             <div class="input-append newsLatterBox text-center">
-                                <input type="text" class="full text-center"  placeholder="E-mail ">
-                                <button class="btn  bg-gray" type="button"> assinar <i class="fa fa-long-arrow-right"> </i> </button>
+                                <input type="text" class="full text-center" id="emailNews"  placeholder="E-mail ">
+                                <button onclick="assinarNews();" class="btn  bg-gray" type="button"> assinar <i class="fa fa-long-arrow-right"> </i> </button>
                             </div>
                         </li>
                     </ul>
@@ -121,13 +47,6 @@
     <div class="footer-bottom">
         <div class="container">
         	<p class="pull-left"> desenvolvimento <a href="http://www.agenciawi9.com.br/" target="_blank" title="agência wi9">agência wi9</a> </p>
-        	<!--<div class="pull-right paymentMethodImg">
-                <img height="30" class="pull-right" src="images/site/payment/master_card.png" alt="img" >
-                <img height="30" class="pull-right" src="images/site/payment/paypal.png" alt="img" >
-                <img height="30" class="pull-right" src="images/site/payment/american_express_card.png" alt="img" >
-                <img height="30" class="pull-right" src="images/site/payment/discover_network_card.png" alt="img" >
-                <img height="30" class="pull-right" src="images/site/payment/google_wallet.png" alt="img" >
-            </div>-->
     	</div>
     </div>
 </footer>
