--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/index.html.twig
@@ -6,19 +6,27 @@
 
 
 {% block content %}
-        <ul class="breadcrumbs">
-            <div class="container">
-                <li class="home">
-                    <a href="{{ path('_loja_index') }}" title="Go to Home Page"><img src="{{ asset('bundles/nutrividaloja/loja/images/home.png') }}" alt=""/></a>&nbsp;&nbsp;
-                    <span>&gt;</span>&nbsp;
-                </li>
-                <li class="home">
-                    NutriVida&nbsp; 
-                    <span>&gt;</span>
-                </li>
-                <li class="home">
-                    <span class="red"> &nbsp;Cliente&nbsp;</span>
-                </li>
-            </div>
-        </ul>
+        <div class="container main-container sobre">
+            <div class="row innerPage">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row userInfo">
+                        <div class="col-xs-12 col-sm-12">
+                            <h1 class="title-big text-center section-title-style2">
+                                <span >
+                                    Área do cliente
+                                </span>
+                            </h1>
+                            
+
+                            <h2>ok</h2>
+                            <p class="lead text-center">
+                                Ok
+                            </p>
+                            <hr>
+                        </div>
+                    </div>  <!--/row end-->
+                </div>
+            </div> <!--/.innerPage-->
+            <div style="clear:both">  </div>
+        </div><!-- /.main-container -->
 {% endblock %}
