--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/pedidoFinalizado.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/pedidoFinalizado.html.twig
@@ -4,39 +4,27 @@
 {% block head %}
 {% endblock %}
 
-
 {% block content %}
-    <ul class="breadcrumbs">
-        <div class="container">
-            <li class="home">
-                <a href="index.html" title="Go to Home Page"><img src="images/home.png" alt=""/></a>&nbsp;&nbsp;
-                <span>&gt;</span>&nbsp;
-            </li>
-            <li class="home">
-                NutriVida&nbsp; 
-                <span>&gt;</span>
-            </li>
-            <li class="home">
-                    <span class="red"> &nbsp;Pedido Finalizado&nbsp;</span>
-            </li>
-        </div>
-    </ul>
-    <div class="contact">
-        <div class="container">
-            <div class="contact_top">
-                <div class="col-md-12 contact_left">
-                    <div class="contact_grid contact_address">
-                        <h3>Pedido Finalizado</h3>
-                        <p>
-                            Seu pedido foi processado com sucesso.
-                        </p>
-                        <p>
-                            Obrigado por comprar com a Nutrivda, seu pedido já foi computado em nosso sistema e em breve entraremos em contato.
-                        </p>
-                    </div>
+            <div class="container sobre">
+            <div class="row innerPage">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row userInfo">
+                        <div class="col-xs-12 col-sm-12">
+                            <h1 class="title-big text-center section-title-style2">
+                                <span >
+                                    Pedido Finalizado
+                                </span>
+                            </h1>
+                            <h2>Seu pedido foi processado com sucesso</h2>
+                            <p class="lead">
+                                Obrigado por escolher a Nutrivida, seu pedido já foi computado em nosso sistema e em breve entraremos em contato.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>  <!--/row end-->
                 </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
+            </div> <!--/.innerPage-->
+            <div style="clear:both">  </div>
+        </div><!-- /.main-container -->
+
 {% endblock %}
