--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Default/index.html.twig
@@ -14,7 +14,21 @@
                      data-cycle-prev=".prevControl"
                      data-cycle-next=".nextControl" data-cycle-loader="wait">
                     {% for banner in banners %}
-                    <div class="slider-item slider-item-img{{ loop.index }}"> <img src="{% path banner.media, 'banner' %}" class="img-responsive parallaximg sliderImg" alt="img"> </div>
+                    <div class="slider-item slider-item-img{{ loop.index }}"> 
+                        <div class="sliderInfo">
+                          <div class="container">
+                            <div class="col-lg-12 col-md-12 col-sm-12 sliderTextFull ">
+                              <div class="inner text-center">
+                                <div class="topAnima animated">
+                                  <h1 class="uppercase xlarge">{{ banner.nome }}</h1>
+                                  <h3 class="hidden-xs">  </h3>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <img src="{% path banner.media, 'banner' %}" class="img-responsive parallaximg sliderImg" alt="img"> 
+                    </div>
                     {% endfor %}
                 </div>
             </div>
