--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
@@ -64,7 +64,7 @@
                         <b class="caret"> </b>
                     </a>
 
-                    <div class="dropdown-menu col-lg-4 col-xs-12 col-md-4 ">
+                    <div class="dropdown-menu ">
                         {{ render(controller('NutrividaLojaBundle:Loja/Carrinho:carrinhoTop')) }}
                     </div>
                 </div>
