--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/footer.html.twig
@@ -20,13 +20,8 @@
                     </ul>
                 </div>
                 
-                <div class="col-lg-2 col-md-2 col-sm-4 col-xs-6">
-                    <h3> minha conta </h3>
-                    <ul>
-                        <li> <a href=""> Login </a> </li>
-                        <li> <a href=""> Minha Conta </a> </li>
-                        <li> <a href=""> Criar Conta </a> </li>
-                    </ul>
+                <div class="col-lg-4 col-md-2 col-sm-4 col-xs-6">
+                    <div class="fb-page" data-href="https://www.facebook.com/nutrivida.loja" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/nutrivida.loja"><a href="https://www.facebook.com/nutrivida.loja">NutriVida Tramandaí</a></blockquote></div></div>                
                 </div>
                 
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 ">
