--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Categoria/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Categoria/index.html.twig
@@ -58,14 +58,14 @@
                                 </div>
                                 <div class="description">
                                     <h4><a href="{{ path('_loja_produto', {slugCategoria: categoria.getSlug, slug: prod.getSlug}) }}">{{ prod.nome }}</a></h4>
-                                    <div class="grid-description">
+{#                                    <div class="grid-description">
                                         <p>{{ prod.descricao|striptags }} </p>
                                     </div>
-                                    <div class="list-description">
+#}                                    <div class="list-description">
                                         <p> Sed sed rutrum purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque risus lacus, iaculis in ante vitae, viverra hendrerit ante. Aliquam vel fermentum elit. Morbi rhoncus, neque in vulputate facilisis, leo tortor sollicitudin odio, quis pellentesque lorem nisi quis enim. In dolor mi, hendrerit at blandit vulputate, congue a purus. Sed eget turpis sit amet orci euismod accumsan. Praesent sit amet placerat elit. </p>
                                     </div>
                                     <div class="price"> <span>R$ {{ prod.getValor|number_format(2, ',', '.') }}</span> </div>
-                                    <div class="action-control"> <a class="btn btn-primary" href="javascrip:adicionarCarrinho({{ prod.id }})"> <span class="add2cart"><i class="glyphicon glyphicon-shopping-cart"> </i> Adicionar </span> </a> </div>
+                                    <div class="action-control"> <a class="btn btn-primary" href="javascript:adicionarCarrinho({{ prod.id }})"> <span class="add2cart"><i class="glyphicon glyphicon-shopping-cart"> </i> Adicionar </span> </a> </div>
                                 </div>
                             </div>
 
