--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/layout.html.twig
@@ -162,6 +162,14 @@
         {% block head %}{% endblock %}
     </head>
     <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.5";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
         {% include 'NutrividaLojaBundle:Loja:header.html.twig'  %}
         {% block content %}{% endblock %}
         {% include 'NutrividaLojaBundle:Loja:footer.html.twig'  %}
