--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
@@ -46,6 +46,7 @@
                     if (myDrop.getAcceptedFiles().length>0) {
                         var valor = jQuery("#produto_valor").maskMoney('unmasked')[0];
                         jQuery("#produto_valor").maskMoney('destroy');
+                        jQuery("#produto_valorSemDesconto").maskMoney('destroy');
                         jQuery("#produto_valor").val(valor);
                         jQuery("#salvar").hide();
                         jQuery('#loading').show();
@@ -58,6 +59,8 @@
             });
             jQuery("#produto_valor").maskMoney({thousands:'.', decimal:','});
             jQuery("#produto_valor").maskMoney("mask");
+            jQuery("#produto_valorSemDesconto").maskMoney({thousands:'.', decimal:','});
+            jQuery("#produto_valorSemDesconto").maskMoney("mask");
             jQuery("#produto_peso").maskMoney({thousands:'', decimal:'.'});
             jQuery("#produto_peso").maskMoney("mask");
             jQuery("#produto_largura").maskMoney({thousands:'', decimal:'.'});
@@ -158,6 +161,7 @@
                         {{ form_row(form.nome) }}
                         {{ form_row(form.descricao) }}
                         {{ form_row(form.valor) }}
+                        {{ form_row(form.valorSemDesconto) }}
                         {{ form_row(form.peso) }}
                         {{ form_row(form.largura) }}
                         {{ form_row(form.comprimento) }}
